java-webserver-charts/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webserver-deployment
  labels:
    app: java-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-webserver
  template:
    metadata:
      labels:
        app: java-webserver
    spec:
      containers:
        - name: java-webserver-container
          image: k3d-java-webserver-sre-registry:5050/java-webserver:latest
          ports:
            - containerPort: 8080
