java-webserver-charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-webserver-service
  labels:
    app: java-webserver
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: java-webserver
