java-webserver-charts/templates/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-webserver-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - java-webserver-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: java-webserver-service
            port:
              number: 8080
